Added adding record
